cleaned, processed, visualization

--- a/Code/Data Visualization.ipynb
+++ b/Code/Data Visualization.ipynb
@@ -281,6 +281,7 @@
     "from pandas.plotting import (scatter_matrix,bootstrap_plot)\n",
     "import warnings; warnings.simplefilter('ignore')\n",
     "\n",
+    "#check the data\n",
     "data = pd.read_csv('movies_metadata.csv')\n",
     "data.head()"
    ]
@@ -703,6 +704,7 @@
     }
    ],
    "source": [
+    "#check for NaN\n",
     "data.isna().sum().sort_values(ascending=False)"
    ]
   },
@@ -723,6 +725,7 @@
     }
    ],
    "source": [
+    "#remove NaN\n",
     "data.dropna(inplace=True)\n",
     "data.shape"
    ]
@@ -770,6 +773,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#convert string to float\n",
+    "\n",
     "data['budget'] = data['budget'].astype(np.float)\n",
     "data['popularity'] = data['popularity'].astype(np.float)"
    ]
@@ -780,6 +785,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#remove 0 value\n",
     "data = data[~(data == 0).any(axis=1)]"
    ]
   },
@@ -806,6 +812,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#remove 0.0 value\n",
     "data = data[~(data == 0.0).any(axis=1)]"
    ]
   },
@@ -815,6 +822,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#remove 0 value and NaN\n",
+    "\n",
     "data['popularity'] = data['popularity'].fillna(0.0).astype(np.float)\n",
     "data['runtime'] = data['runtime'].fillna(0.0).astype(np.float)\n",
     "data['title'] = data['title'].fillna('NaN').astype('category')\n",
@@ -1231,6 +1240,8 @@
     }
    ],
    "source": [
+    "#split the required elements out of attributes\n",
+    "\n",
     "data['genres'] = data['genres'].fillna('[]').apply(literal_eval).apply(lambda x: [i['name'] for i in x] if isinstance(x, list) else [])\n",
     "data['production_companies'] = data['production_companies'].fillna('[]').apply(literal_eval).apply(lambda x: [i['name'] for i in x] if isinstance(x, list) else [])\n",
     "data['production_countries'] = data['production_countries'].fillna('[]').apply(literal_eval).apply(lambda x: [i['name'] for i in x] if isinstance(x, list) else [])\n",
@@ -1432,6 +1443,8 @@
     }
    ],
    "source": [
+    "#remove [] for uniform values\n",
+    "\n",
     "data['genres'] = data['genres'].map(lambda x: str(x)[:-1])\n",
     "data['genres'] = data['genres'].map(lambda x: str(x)[1:])\n",
     "\n",
@@ -1773,6 +1786,8 @@
     }
    ],
    "source": [
+    "#see the balance in distribution of revenue\n",
+    "\n",
     "data['revenueinlog'] = np.log1p(data['revenue'])\n",
     "plt.figure(figsize=(10,15))\n",
     "sea.distplot(data['revenueinlog'], vertical=False, rug=True, rug_kws={\"color\": \"g\"})"
@@ -2160,6 +2175,8 @@
     }
    ],
    "source": [
+    "#Binarizing \n",
+    "\n",
     "genres= data.genres.str.get_dummies(sep=',')\n",
     "data =pd.concat([data,genres],axis=1)\n",
     "data.drop(['genres'],axis=1,inplace=True)\n",
